@@ -2504,7 +2504,7 @@ rest.exception.sessionExpired=Session expired
 rest.exception.rateLimited=Rate limited
 rest.exception.authenticationIpRateLimited=Authentication attempts by IP address {0} are rate limited
 rest.exception.authenticationUsernameRateLimited=Authentication attempts against username {0} are rate limited
-rest.exception.genericAuthenticationFailed=Authentication failed: {0}
+rest.exception.genericAuthenticationFailed={0}
 rest.exception.accountDisabled=Account disabled
 rest.exception.credentialsExpired=Credentials expired
 rest.exception.badCredentials=Bad credentials
